[样式]细节更新

--- a/layout/includes/post/reward.pug
+++ b/layout/includes/post/reward.pug
@@ -1,4 +1,4 @@
-.post-reward(onclick='AddRewardMask()')
+.post-reward(onclick='anzhiyu.addRewardMask()')
   .reward-button.button--animated(title='赞赏作者')
     i.anzhiyufont.anzhiyu-icon-hand-heart-fill
     | 打赏作者
