--- a/layout/includes/mixins/article-sort.pug
+++ b/layout/includes/mixins/article-sort.pug
@@ -20,11 +20,11 @@ mixin articleSort(posts, current)
           .article-meta-wrap
             if (theme.post_meta.page.tags && article.tags.data.length > 0)
               span.article-sort-item-tags
-                i.anzhiyufont.anzhiyu-icon-tag
                 each item, index in article.tags.data
-                  a(href=url_for(item.path)).article-meta__tags #[=item.name]
-                  if (index < article.tags.data.length - 1)
-                    span.article-meta__link #[='•']
+                  a(href=url_for(item.path)).article-meta__tags 
+                    span 
+                      i.anzhiyufont.anzhiyu-icon-hashtag
+                      =item.name
             .article-sort-item-time
               i.anzhiyufont.anzhiyu-icon-calendar-alt
               time.post-meta-date-created(datetime=date_xml(article.date) title=_p('post.created') + ' ' + full_date(article.date))= date(article.date, config.date_format)
