--- a/layout/includes/additional-js.pug
+++ b/layout/includes/additional-js.pug
@@ -86,6 +86,8 @@ div
   script(async data-pjax src=url_for(theme.asset.categoryBar))
   //- 即刻依赖waterfall
   script(async data-pjax src=url_for(theme.asset.waterfall))
+  //- 文章二维码
+  script(src='https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-M/qrcodejs/1.0.0/qrcode.min.js')
   //- 右键菜单
   != partial("includes/anzhiyu/rightmenu-js.pug", {}, { cache: true })
   include ./anzhiyu/anzhiyu-js.pug
@@ -98,7 +100,7 @@ div
       LA.init({id: "#{ck}", ck: "#{ck}"});
       new LingQue.Monitor().init({id: "#{theme.LA.LingQueMonitorID}", sendSuspicious:true});
   //- iconfont依赖
-  link(rel="stylesheet" href=url_for(theme.asset.iconfont_css))
+  link(rel="stylesheet" href=url_for(theme.asset.ali_iconfont_css))
   if (theme.icons && theme.icons.ali_iconfont_js)
     script(async src=url_for(theme.icons.ali_iconfont_js))
 
