修复部分缺失图标

--- a/source/css/_global/index.styl
+++ b/source/css/_global/index.styl
@@ -117,7 +117,10 @@ hr
       font-size: 20px
       line-height: 1
       transition: all 1s ease-in-out
-      @extend .fontawesomeIcon
+      if hexo-config('icons.fontawesome')
+        @extend .fontawesomeIcon
+      else
+        @extend .anzhiyufont
 
 .table-wrap
   overflow-x: scroll
