1. 调整移动端控制台按钮距离底部高度 2. 修复版权图标遮挡问题 close #18 3. 修复note等标签的图标问题 4. 修复搜索按钮旋转问题 5. 新增mode配置项

--- a/source/css/_custom/about/about.css
+++ b/source/css/_custom/about/about.css
@@ -633,7 +633,7 @@ body[data-type="about"] #web_bg {
   .site-card-group > a {
     width: 100% !important;
   }
-  .post-reward {
+  body[data-type="about"] .post-reward {
     display: none;
   }
   .reward-list-item {
