--- a/layout/includes/post/ptool.pug
+++ b/layout/includes/post/ptool.pug
@@ -25,10 +25,11 @@ if !theme.disable_top_img && page.top_img !== false
   .post-tools-left
     if theme.reward.enable && theme.reward.QR_code
         !=partial('includes/post/reward', {}, {cache: true})
-    .reward-link.mode
-      a.reward-link-button(href='/wechat/' data-pjax-state='')
-        i.anzhiyufont.anzhiyu-icon-plant-fill
-        | 运营模式与责任
+    if theme.ptool.mode
+      .reward-link.mode
+        a.reward-link-button(href=theme.ptool.mode data-pjax-state='')
+          i.anzhiyufont.anzhiyu-icon-plant-fill
+          | 运营模式与责任
     .share-link.mobile
       .share-qrcode
         .share-button(title='使用手机访问这篇文章')
