修复工具栏多tag情况

--- a/source/css/_layout/post.styl
+++ b/source/css/_layout/post.styl
@@ -163,20 +163,23 @@ beautify()
     display: flex
     align-items: center;
     justify-content: space-between;
+    width: 100%;
     .post-meta
       &__box
         display: flex
         flex-direction: column;
+        width: 100%;
         
         &__tag-list,&__category-list
           display: flex
+          width: 100%;
 
         &__tags,&__categoryes
           display: flex
           align-items: center
           justify-content: center
           margin: 4px 8px 4px 0
-          padding: 0 12px
+          padding: 4px 12px
           width: fit-content
           border-radius: 8px
           font-size: .85em
