--- a/source/css/_layout/ptool.styl
+++ b/source/css/_layout/ptool.styl
@@ -18,12 +18,11 @@
       > div
         margin: 8px;
   .post-tools-right
-    overflow: scroll;
-    overflow-x: overlay;
     padding-right: 0px;
     display: flex;
     align-items: center;
     margin-bottom: 0.5rem;
+    width 100%
     
 .share-link
   margin-left: 0.5rem;
