--- a/source/css/_custom/404/404.css
+++ b/source/css/_custom/404/404.css
@@ -77,6 +77,7 @@
   flex-wrap: nowrap;
   max-width: 1200px;
   margin: 0 auto;
+  overflow: scroll;
 }
 
 #body-wrap.error .aside-list .aside-list-item {
