--- a/layout/includes/anzhiyu/ai-info.pug
+++ b/layout/includes/anzhiyu/ai-info.pug
@@ -192,7 +192,7 @@ if (description || ai)
         });
 
         document.getElementById("go-tianli-blog").addEventListener("click", () => {
-          window.open("https://tianli-blog.club/%e5%85%b3%e4%ba%8e/privacy-chatgpt/", "_blank");
+          window.open("https://afdian.net/item/2e07e870dad911edacb852540025c377", "_blank");
         });
         
         document.getElementById("ai-Toggle").addEventListener("click", () => {
