--- a/source/css/_layout/post.styl
+++ b/source/css/_layout/post.styl
@@ -336,6 +336,10 @@ beautify()
     font-weight: 800;
     font-size: 20px;
     line-height: 20px;
+  .anzhiyufont.anzhiyu-icon-arrow-rotate-right
+    font-size: 14px;
+    margin-left: 4px
+    cursor pointer
 
   .ai-title-text
     font-weight: bold;
