--- a/source/css/_layout/post.styl
+++ b/source/css/_layout/post.styl
@@ -173,6 +173,7 @@ beautify()
         &__tag-list,&__category-list
           display: flex
           width: 100%;
+          flex-wrap: wrap;
 
         &__tags,&__categoryes
           display: flex
