tainli名称改为大写

--- a/layout/includes/anzhiyu/ai-info.pug
+++ b/layout/includes/anzhiyu/ai-info.pug
@@ -17,7 +17,7 @@ if (description && ai)
       i.anzhiyufont.anzhiyu-icon-arrow-rotate-right
       #ai-tag
         if mode == "tianli"
-          = "tianli GPT"
+          = "Tianli GPT"
         else
           = gptName + " GPT"
     .ai-explanation AI初始化中...
