--- a/source/css/_layout/post.styl
+++ b/source/css/_layout/post.styl
@@ -473,6 +473,8 @@ blockquote {
     cursor pointer
     transition: .3s;
     animation: slide-in 0.6s 0.1s backwards;
+    span.index
+      padding: 4px
     &:hover
       color: var(--anzhiyu-white);
       background: var(--anzhiyu-theme);
