--- a/layout/includes/anzhiyu/ai-info.pug
+++ b/layout/includes/anzhiyu/ai-info.pug
@@ -241,7 +241,7 @@ if (description && ai)
             aiAbstract(#{basicWordCount})
           } else {
             mode = "tianli"
-            document.getElementById("ai-tag").innerHTML = "tianli GPT"
+            document.getElementById("ai-tag").innerHTML = "Tianli GPT"
             aiAbstract(#{basicWordCount})
           }
         }
